@@ -18,6 +18,7 @@ Bugs fixed:
 - 2169607 sqlLexer assumes line lengths under MAXBUF
 - 2172023 mlogf call cleanups
 - 2172888 http content-length is not constrained
+- 2175426 possible int overflow
 
 Changes in 1.3.2
 ================
